Changes to support JDK23 everywhere