@@ -1,4 +1,4 @@
 #!/bin/bash
 
-javac --enable-preview -source 21 -d classes src/main/java/com/coralblocks/javatocppandback/ffm/HelloWorld.java
+javac -d classes src/main/java/com/coralblocks/javatocppandback/ffm/HelloWorld.java
 
